--- a/src/app/modules/notification/notification-page/notification-page.component.html
+++ b/src/app/modules/notification/notification-page/notification-page.component.html
@@ -27,7 +27,7 @@
 <!--                    <mat-icon class="mb-2 text-green">file_copy</mat-icon>-->
                     <img src="../../../../assets/images/ic_recovery_collection_notification.PNG" class="img-responsive center-block w-12 mx-auto mb-3" alt="icon"/>
 
-                    <p class="text-md text-black">Recovery Collection Notifications</p>
+                    <p class=" text-black">Recovery Collection Notifications</p>
                 </div>
             </mat-card>
         </div>
@@ -40,7 +40,7 @@
                     <!--                    <mat-icon class="mb-2 text-green">file_copy</mat-icon>-->
                     <img src="../../../../assets/images/ic_due_payments.PNG" class="img-responsive center-block w-12 mx-auto mb-3" alt="icon"/>
 
-                    <p class="text-md text-black">Due Payments/Installments</p>
+                    <p class=" text-black">Due Payments/Installments</p>
                 </div>
             </mat-card>
         </div>
@@ -53,7 +53,7 @@
                     <!--                    <mat-icon class="mb-2 text-green">file_copy</mat-icon>-->
                     <img src="../../../../assets/images/ic_possible_customer_lead.PNG" class="img-responsive center-block w-12 mx-auto mb-3" alt="icon"/>
 
-                    <p class="text-md text-black">Possible Customer Leads</p>
+                    <p class=" text-black">Possible Customer Leads</p>
                 </div>
             </mat-card>
         </div>
@@ -67,7 +67,7 @@
                 <div class="d-grid" style="justify-items: center;">
                     <img src="../../../../assets/images/ic_text_msg.PNG" class="img-responsive center-block w-12 mx-auto mb-3" alt="icon"/>
 
-                    <p class="text-md text-black">Intimate the Loaner via Text</p>
+                    <p class=" text-black">Intimate the Loaner via Text</p>
                 </div>
             </mat-card>
         </div>
@@ -79,7 +79,7 @@
                 <div class="d-grid" style="justify-items: center;">
                     <img src="../../../../assets/images/ic_loanersdefaulters.PNG" class="img-responsive center-block w-12 mx-auto mb-3" alt="icon"/>
 
-                    <p class="text-md text-black">Loaners/Defaulter</p>
+                    <p class=" text-black">Loaners/Defaulter</p>
                 </div>
             </mat-card>
         </div>
@@ -90,7 +90,7 @@
                 <count [count]="nDc" *ngIf="nDc  != undefined"></count>
                 <div class="d-grid" style="justify-items: center;">
                     <img src="../../../../assets/images/ic_death_of_a_customer.PNG" class="img-responsive center-block w-12 mx-auto mb-3" alt="icon"/>
-                    <p class="text-md text-black">Death of a Customer</p>
+                    <p class=" text-black">Death of a Customer</p>
                 </div>
             </mat-card>
         </div>
@@ -104,7 +104,7 @@
                 <div class="d-grid" style="justify-items: center;">
                     <img src="../../../../assets/images/ic_cnic_expiry.png" class="img-responsive center-block w-12 mx-auto mb-3"
                     alt="icon"/>
-                    <p class="text-md text-black">Cnic Expiry of Loaner</p>
+                    <p class=" text-black">Cnic Expiry of Loaner</p>
                 </div>
             </mat-card>
         </div>
@@ -116,7 +116,7 @@
                 <div class="d-grid" style="justify-items: center;">
                     <img src="../../../../assets/images/ic_demand_notice.PNG" class="img-responsive center-block w-12 mx-auto mb-3" alt="icon"/>
 
-                    <p class="text-md text-black">Demand Notices</p>
+                    <p class=" text-black">Demand Notices</p>
                 </div>
             </mat-card>
         </div>
@@ -128,7 +128,7 @@
                 <div class="d-grid" style="justify-items: center;">
                     <img src="../../../../assets/images/ic_business_leads.PNG" class="img-responsive center-block w-12 mx-auto mb-3"
                     alt="icon"/>
-                    <p class="text-md text-black">Business Leads</p>
+                    <p class=" text-black">Business Leads</p>
                 </div>
             </mat-card>
         </div>
@@ -142,7 +142,7 @@
                 <div class="d-grid" style="justify-items: center;">
                     <img src="../../../../assets/images/ic_upcoming_visits.PNG" class="img-responsive center-block w-12 mx-auto mb-3">
 
-                    <p class="text-md text-black">Upcoming Visits</p>
+                    <p class=" text-black">Upcoming Visits</p>
                 </div>
             </mat-card>
         </div>
@@ -154,7 +154,7 @@
                 <div class="d-grid" style="justify-items: center;">
                     <img src="../../../../assets/images/ic_loan_defaulters.PNG" class="img-responsive center-block w-12 mx-auto mb-3" alt="icon"/>
 
-                    <p class="text-md text-black">Loan Defaulters</p>
+                    <p class=" text-black">Loan Defaulters</p>
                 </div>
             </mat-card>
         </div>
