--- a/src/app/modules/reports/reports/reports.component.html
+++ b/src/app/modules/reports/reports/reports.component.html
@@ -35,7 +35,7 @@
                 <div class="d-grid" style="justify-items: center;">
                     <img src="../../../../assets/images/id-card.png" class="img-responsive center-block w-12 mx-auto mb-3">
                     
-                    <p class="text-md text-black">Search
+                    <p class=" text-black">Search
                         Loan Cases by CNIC</p>
                 </div>
             </mat-card>
@@ -57,7 +57,7 @@
                       id="llcInquiryText">
                 <div class="d-grid" style="justify-items: center;">
                     <img src="../../../../assets/images/reports.png" class="img-responsive center-block w-12 mx-auto mb-3">
-                <p class="text-md text-black"
+                <p class=" text-black"
                >Bifurcation of OS balances LC</p>
             </div>
 
@@ -83,7 +83,7 @@
 
 
 
-                <p class="text-md text-black">Updated List of defaulters of a circle for each MCO</p>
+                <p class=" text-black">Updated List of defaulters of a circle for each MCO</p>
             </div>
             </mat-card>
         </div>
@@ -111,7 +111,7 @@
                     <img src="../../../../assets/images/reports.png" class="img-responsive center-block w-12 mx-auto mb-3">
 
 
-                <p class="text-md text-black" >FAs will see Circle-Wise/Party Wise Early Warning reports on NPLs and
+                <p class=" text-black" >FAs will see Circle-Wise/Party Wise Early Warning reports on NPLs and
                 Charge-off loans for recovery persuasion.</p>
             </div></mat-card>
         </div>
@@ -124,7 +124,7 @@
                 <div class="d-grid" style="justify-items: center;">
                     <img src="../../../../assets/images/reports.png" class="img-responsive center-block w-12 mx-auto mb-3">
 
-                    <p class="text-md text-black">Early warning reports for Due Installments</p>
+                    <p class=" text-black">Early warning reports for Due Installments</p>
                 </div>
             </mat-card>
         </div>
@@ -137,7 +137,7 @@
                     <img src="../../../../assets/images/reports.png" class="img-responsive center-block w-12 mx-auto mb-3">
 
 
-                <p class="text-md text-black"
+                <p class=" text-black"
                 >Loan amounts likely to be converted into default</p>
             </div>
 
@@ -154,7 +154,7 @@
                 <div class="d-grid" style="justify-items: center;">
                     <img src="../../../../assets/images/reports.png" class="img-responsive center-block w-12 mx-auto mb-3">
 
-                    <p class="text-md text-black"
+                    <p class=" text-black"
                     >Voucher Posting Day-Booking Report</p>
                 </div>
             </mat-card>
@@ -167,7 +167,7 @@
                 <div class="d-grid" style="justify-items: center;">
                     <img src="../../../../assets/images/reports.png" class="img-responsive center-block w-12 mx-auto mb-3">
 
-                    <p class="text-md text-black"
+                    <p class=" text-black"
                     >Daily Voucher Printing</p>
                 </div>
             </mat-card>
@@ -180,7 +180,7 @@
                 <div class="d-grid" style="justify-items: center;">
                     <img src="../../../../assets/images/reports.png" class="img-responsive center-block w-12 mx-auto mb-3">
 
-                    <p class="text-md text-black"
+                    <p class=" text-black"
                     >Affidavit For Legal Heirs</p>
                 </div>
             </mat-card>
@@ -197,7 +197,7 @@
                 <div class="d-grid" style="justify-items: center;">
                     <img src="../../../../assets/images/reports.png" class="img-responsive center-block w-12 mx-auto mb-3">
 
-                    <p class="text-md text-black"
+                    <p class=" text-black"
                     >Payment Behavior</p>
                 </div>
             </mat-card>
@@ -211,7 +211,7 @@
                     <img src="../../../../assets/images/reports.png" class="img-responsive center-block w-12 mx-auto mb-3">
 
 
-                <p class="text-md text-black"
+                <p class=" text-black"
             >Disbursement Performance Report</p>
         </div></mat-card>
         </div>
@@ -224,7 +224,7 @@
                 <div class="d-grid" style="justify-items: center;">
                     <img src="../../../../assets/images/reports.png" class="img-responsive center-block w-12 mx-auto mb-3">
 
-                    <p class="text-md text-black"
+                    <p class=" text-black"
                     >Disbursement Performance (Purpose-Wise) Report</p>
                 </div>
             </mat-card>
@@ -241,7 +241,7 @@
                     <img src="../../../../assets/images/reports.png" class="img-responsive center-block w-12 mx-auto mb-3">
 
 
-                <p class="text-md text-black"
+                <p class=" text-black"
             >Loan Account Balancing</p>
         </div></mat-card>
         </div>
@@ -253,7 +253,7 @@
                 <div class="d-grid" style="justify-items: center;">
                     <img src="../../../../assets/images/reports.png" class="img-responsive center-block w-12 mx-auto mb-3">
 
-                    <p class="text-md text-black"
+                    <p class=" text-black"
                     >Insurance Report</p>
                 </div>
             </mat-card>
@@ -264,7 +264,7 @@
                 <div class="d-grid" style="justify-items: center;">
                     <img src="../../../../assets/images/reports.png" class="img-responsive center-block w-12 mx-auto mb-3">
 
-                    <p class="text-md text-black"
+                    <p class=" text-black"
                     >LA File Progress Summary</p>
                 </div></mat-card>
         </div>
@@ -279,7 +279,7 @@
                     <img src="../../../../assets/images/reports.png" class="img-responsive center-block w-12 mx-auto mb-3">
 
 
-                    <p class="text-md text-black"
+                    <p class=" text-black"
                     >Loan Information Details</p>
                 </div></mat-card>
         </div>
@@ -291,7 +291,7 @@
                     <img src="../../../../assets/images/reports.png" class="img-responsive center-block w-12 mx-auto mb-3">
 
 
-                    <p class="text-md text-black"
+                    <p class=" text-black"
                     >Get Unsuccessful Login</p>
                 </div>
 
@@ -304,7 +304,7 @@
                     <img src="../../../../assets/images/reports.png" class="img-responsive center-block w-12 mx-auto mb-3">
 
 
-                    <p class="text-md text-black"
+                    <p class=" text-black"
                     >HO/Zonal Expenses Report</p>
                 </div></mat-card>
         </div>
@@ -319,7 +319,7 @@
                     <img src="../../../../assets/images/reports.png" class="img-responsive center-block w-12 mx-auto mb-3">
 
 
-                    <p class="text-md text-black"
+                    <p class=" text-black"
                     >Mark On CA Report</p>
                 </div></mat-card>
         </div>
@@ -330,7 +330,7 @@
                     <img src="../../../../assets/images/reports.png" class="img-responsive center-block w-12 mx-auto mb-3">
 
 
-                    <p class="text-md text-black"
+                    <p class=" text-black"
                     >Recovery Schedule</p>
                 </div></mat-card>
         </div>
@@ -341,7 +341,7 @@
                     <img src="../../../../assets/images/reports.png" class="img-responsive center-block w-12 mx-auto mb-3">
 
 
-                    <p class="text-md text-black"
+                    <p class=" text-black"
                     >Loan Move</p>
                 </div></mat-card>
         </div>
