--- a/src/styles/styles.scss
+++ b/src/styles/styles.scss
@@ -330,6 +330,9 @@ button:focus {
                 color: #01671B;
                 box-shadow: rgba(0, 0, 0, 0.15) 1.95px 1.95px 2.6px;
                 border: 1px solid #22c55e !important;
+                p{
+                    font-size: 12px;
+                }
             }
         }
     }
