--- a/src/styles/styles.scss
+++ b/src/styles/styles.scss
@@ -9,8 +9,8 @@ $MaterialIcons_FontPath: "~material-icons-font/fonts";
 @import '~material-icons-font/sass/main';
 @import '~material-icons-font/sass/Regular';
 @import "~bootstrap/scss/bootstrap";
-@import url('https://fonts.googleapis.com/css2?family=Poppins&display=swap');
-@import url('https://fonts.googleapis.com/css2?family=Poppins:wght@400;700&display=swap');
+// @import url('https://fonts.googleapis.com/css2?family=Poppins&display=swap');
+// @import url('https://fonts.googleapis.com/css2?family=Poppins:wght@400;700&display=swap');
 body {
     font-family: 'Poppins', sans-serif !important;
 }
