--- a/src/styles/styles.scss
+++ b/src/styles/styles.scss
@@ -6,6 +6,8 @@
 @import '~material-icons-font/sass/mixins';
 
 $MaterialIcons_FontPath: "~material-icons-font/fonts";
+@import '~material-design-icons/iconfont/material-icons.css';
+
 @import '~material-icons-font/sass/main';
 @import '~material-icons-font/sass/Regular';
 @import "~bootstrap/scss/bootstrap";
