--- a/src/app/modules/reports/recovery-schedule/recovery-schedule.component.html
+++ b/src/app/modules/reports/recovery-schedule/recovery-schedule.component.html
@@ -45,7 +45,7 @@
                                 <div class="flex flex-shrink-0 items-center mt-6 sm:mt-0 mx-2" style="width: 225px;">
                                     <mat-form-field class="mat-form-field-fluid w-full" appearance="outline">
                                         <mat-label class="customMatLabel">Loan Case#</mat-label>
-                                        <input matInput placeholder="Enter Loan Case No" formControlName="VoucherNo"
+                                        <input matInput placeholder="Enter Loan Case No" formControlName="LcNO"
                                                maxlength="30" autocomplete="off" appNumberOnly/>
                                     </mat-form-field>
                                 </div>
