--- a/src/app/modules/notification/loan-defaulters/loan-defaulters.component.html
+++ b/src/app/modules/notification/loan-defaulters/loan-defaulters.component.html
@@ -121,7 +121,7 @@
                     </mat-header-cell
                     >
                     <mat-cell *matCellDef="let notification">{{
-                        notification.LcNO
+                        notification.LoanCaseNumber
                         }}</mat-cell>
                 </ng-container>
 
