--- a/src/app/modules/customer/customer-profile/customer-profile.component.html
+++ b/src/app/modules/customer/customer-profile/customer-profile.component.html
@@ -5,7 +5,8 @@
     <div class="row py-3 pb-0">
         <div class="col-lg-12 col-sm-12">
             <div class="heading">{{getTitle()}}
-                <button mat-raised-button color="primary" style="float:right;" (click)="viewHistory()">View History
+                <button mat-raised-button color="primary" *ngIf="createCustomer.CustomerStatus=='A'"
+                        style="float:right;" (click)="viewHistory()">View History
                 </button>
             </div>
         </div>
@@ -509,7 +510,6 @@
                                 <mat-hint align="left">Please enter Family No</mat-hint>
                             </mat-form-field>
                         </div>
-                        {{OccupationLov | json}}
                         <div class="col-lg-3 kt-margin-bottom-20-mobile">
                             <mat-form-field class="mat-form-field-fluid w-100" appearance="outline">
                                 <!--  <mat-label>Occupation</mat-label>-->
