--- a/src/app/modules/customer/correction-passbook/correction-passbook.component.html
+++ b/src/app/modules/customer/correction-passbook/correction-passbook.component.html
@@ -22,7 +22,7 @@
         <div class="card card-body">
 
 
-            <div class="form-group kt-form__group row">
+            <div class="form-group kt-form__group row" [formGroup]="cpForm">
 
 
                 <app-zone-branch-circle [form]="cpForm" [should_show_circle]="false"
