--- a/src/app/modules/customer/correction-passbook/correction-passbook.component.html
+++ b/src/app/modules/customer/correction-passbook/correction-passbook.component.html
@@ -179,10 +179,15 @@
         </pre> -->
 
         <div *ngIf="searchData" class="form-group kt-form__group row mt-2 justify-content-center">
-            <button mat-raised-button color="primary" (click)="submit()">
-                <mat-icon class="mr-2">check_circle</mat-icon>
-                Submit
-            </button>
+            <div class="row">
+                <div class="col-lg-12 text-right">
+                    <button mat-raised-button color="primary" (click)="submit()">
+                        <mat-icon class="mr-2">check_circle</mat-icon>
+                        Submit
+                    </button>
+                </div>
+            </div>
+
         </div>
     </div>
 
