--- a/src/app/modules/loan-utilization/search-utilization/search-utilization.component.html
+++ b/src/app/modules/loan-utilization/search-utilization/search-utilization.component.html
@@ -1,5 +1,4 @@
-<div
-    class=" px-10 sm:absolute sm:inset-0 flex flex-col flex-auto min-w-0 sm:overflow-scroll bg-card dark:bg-transparent">
+<div class=" px-10  sm:absolute sm:inset-0 flex flex-col flex-auto min-w-0 sm:overflow-auto bg-card dark:bg-transparent">
 
     <div class="row pt-3">
         <div class="col-lg-9 col-sm-12">
@@ -19,7 +18,6 @@
 
     <!-- Header -->
 
-    <div class="flex-inline flex-column">
     <div class="collapse show" id="collapseExample">
         <div class="card card-body">
             <div class="flex" style="flex-wrap: wrap;" [formGroup]="utilizationSearch">
@@ -68,8 +66,6 @@
         </div>
 
     </div>
-    </div>
-
 
     <!-- Header -->
     <div
@@ -79,9 +75,9 @@
         <!-- Main -->
 
         <!-- Products list -->
-        <div class="flex flex-auto overflow-scroll shadow-xs rounded-sm bg-gray-50" style="flex-direction: column;"
+        <div class="flex flex-auto overflow-auto shadow-xs rounded-sm bg-gray-50" style="flex-direction: column;"
              [style.height]="gridHeight">
-            <div class="flex flex-col flex-auto sm:mb-6"
+            <div class="flex flex-col flex-auto overflow-auto sm:mb-6"
             >
                 <mat-table class="lmat-elevation-z8" #table
                            [dataSource]="dataSource | paginate: {itemsPerPage: itemsPerPage, currentPage: pageIndex, totalItems: totalItems}"
