--- a/src/app/modules/reschedule-cases/pending-reschedule-cases/pending-reschedule-cases.component.html
+++ b/src/app/modules/reschedule-cases/pending-reschedule-cases/pending-reschedule-cases.component.html
@@ -1,4 +1,4 @@
-<div
+u<div
     class=" px-10 sm:absolute sm:inset-0 flex flex-col flex-auto min-w-0 sm:overflow-hidden bg-card dark:bg-transparent">
 
     <div class="row pt-3">
