--- a/src/app/modules/configuration-management/configuration-list/configuration-list.component.html
+++ b/src/app/modules/configuration-management/configuration-list/configuration-list.component.html
@@ -76,7 +76,7 @@
                             <tbody>
                             <tr *ngFor="let child of parent_configuration.ChildConfigurations;let i=index;">
                                 <td>{{i + 1}}</td>
-                                <td class="break-all" >{{child.KeyName}}</td>
+                                <td class="break-all" style="width: 300px;">{{child.KeyName}}</td>
                                 <td class="break-all" style="width: 400px;">{{child.KeyValue}}</td>
                                 <td>
                                     <div class="flex">
