--- a/src/app/modules/geo-fencing/geo-fencing-list/geo-fencing-list.component.html
+++ b/src/app/modules/geo-fencing/geo-fencing-list/geo-fencing-list.component.html
@@ -106,7 +106,7 @@
 
 
     <div class="flex flex-auto overflow-y-scroll border shadow-xs rounded-sm bg-gray-50 "
-         style="flex-direction: column;">
+         style="flex-direction: column;" [style.height]="gridHeight">
         <div class="example-table-container">
 
             <table mat-table
