--- a/src/app/modules/land-creation/land-history/land-history.component.html
+++ b/src/app/modules/land-creation/land-history/land-history.component.html
@@ -1,9 +1,9 @@
 <div
-    class=" px-10 pt-4 sm:absolute sm:inset-0 flex flex-col flex-auto min-w-0 sm:overflow-hidden bg-card dark:bg-transparent">
-    <h3 class="kt-portlet__head-title">Land History</h3>
+    class=" px-10 pt-3 sm:absolute sm:inset-0 flex flex-col flex-auto min-w-0 sm:overflow-hidden bg-card dark:bg-transparent">
+    <h3 class="heading">Land History</h3>
 
     <div class="flex flex-auto" style="flex-direction: column; overflow-y: scroll">
-        <div class="example-table-container">
+        <div class="example-table-container border shadow-xs rounded-sm bg-gray-50">
             <!--[style.height]="gridHeight"-->
             <mat-table
                 #table
