--- a/src/app/modules/customer/pending-customers/pending-customers.component.html
+++ b/src/app/modules/customer/pending-customers/pending-customers.component.html
@@ -1,5 +1,5 @@
 <div
-    class="px-10  sm:absolute sm:inset-0 flex flex-col flex-auto min-w-0 sm:overflow-y-scroll bg-card dark:bg-transparent">
+    class="px-10  sm:absolute sm:inset-0 flex flex-col flex-auto min-w-0 sm:overflow-y-auto bg-card dark:bg-transparent">
 
 
     <div class="row pt-3 pb-0">
@@ -81,10 +81,10 @@
 
         </div>
     </div>
-    <div class="flex flex-auto border shadow-xs rounded-sm bg-gray-50 overflow-y-scroll"
-         style="flex-direction: column;">
+    <div class="flex flex-auto border shadow-xs rounded-sm bg-gray-50 "
+         style="flex-direction: column;" [style.height]="gridHeight" >
 
-        <div class="example-table-container">
+        <div class="example-table-container"  >
 
             <mat-table class="lmat-elevation-z8" #table
                        [dataSource]="dataSource | paginate: {itemsPerPage: itemsPerPage, currentPage: pageIndex, totalItems: total_customers_length}"
